tests/error/construct/type.mml
type s = 
  | Some of int

Some(true)
